# devon

./: .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  go.mod  go.sum  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  docs.yaml
changelog/: index.html
concepts/: index.html
concepts/architecture/: index.html
concepts/source-plugins/: index.html
concepts/storage-design/: index.html
config/: default_config.yaml
docs/: changelog.md  index.md
docs/concepts/: architecture.md  index.md  source-plugins.md  storage-design.md
docs/getting-started/: first-model.md  index.md  installation.md
docs/guides/: configuration.md  docker.md  downloading.md  index.md  kitt-integration.md  managing.md  rest-api.md  searching.md
docs/reference/: configuration.md  index.md  model-metadata.md  rest-api.md  storage-index.md
docs/reference/cli/: index.md
frontend/: index.html  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/api/: client.ts
frontend/src/components/: SetupBanner.tsx
frontend/src/pages/: Downloads.tsx  Models.tsx  Search.tsx  Settings.tsx
getting-started/: index.html
getting-started/first-model/: index.html
getting-started/installation/: index.html
guides/: index.html
guides/configuration/: index.html
guides/docker/: index.html
guides/downloading/: index.html
guides/kitt-integration/: index.html
guides/managing/: index.html
guides/rest-api/: index.html
guides/searching/: index.html
internal/sources/huggingface/: huggingface.go
reference/: index.html
reference/cli/: index.html
reference/configuration/: index.html
reference/model-metadata/: index.html
reference/rest-api/: index.html
reference/storage-index/: index.html
search/: search_index.json
src/devon/: __init__.py  __main__.py
src/devon/api/: __init__.py  app.py  dependencies.py  (+1 more)
tests/test_cli/: test_download_cmd.py  test_remove_cmd.py  test_scan_cmd.py
tests/test_search/: test_query_parser.py
tests/test_sources/: test_registry.py
tests/test_storage/: test_organizer.py  test_scanner.py
tests/test_utils/: test_format_utils.py  test_size_parser.py  test_url_parser.py
(+39 files in other folders)
